Correct syntax, too much space

--- a/less/theme.less
+++ b/less/theme.less
@@ -130,7 +130,7 @@ blockquote {
 }
 
 .section-head {
-    margin-top: 4em;
+    margin-top: 2em;
 }
 
 footer {
